refactor: comic representation in card

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,6 +3,7 @@
 @use "/resources/scss/partials/header.scss";
 @use "/resources/scss/partials/footer.scss";
 @use "/resources/scss/partials/home-main.scss";
+@use "/resources/scss/partials/comics-list-main.scss";
 
 // body
 body {
