style: form customization

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,6 +4,7 @@
 @use "/resources/scss/partials/footer.scss";
 @use "/resources/scss/partials/home-main.scss";
 @use "/resources/scss/partials/comics-list-main.scss";
+@use "/resources/scss/partials/create-main.scss";
 
 // body
 body {
