style: customization show page

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,6 +5,7 @@
 @use "/resources/scss/partials/home-main.scss";
 @use "/resources/scss/partials/comics-list-main.scss";
 @use "/resources/scss/partials/create-main.scss";
+@use "/resources/scss/partials/show-main.scss";
 
 // body
 body {
