--- a/resources/scss/partials/header.scss
+++ b/resources/scss/partials/header.scss
@@ -6,4 +6,13 @@ header {
     align-items: center;
     justify-content: space-between;
     background-color: rgb(4, 60, 128);
+
+    a {
+        font-size: 25px;
+        font-weight: bold;
+
+        &:hover {
+            color: rgb(0, 255, 157);
+        }
+    }
 }
