--- a/resources/scss/partials/show-main.scss
+++ b/resources/scss/partials/show-main.scss
@@ -11,5 +11,11 @@ main {
             flex-direction: column;
             align-items: center;
         }
+
+        a {
+            text-align: center;
+            width: 200px;
+            margin: 30px auto 0 auto;
+        }
     }
 }
