--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 // importazione
+@use "~bootstrap/scss/bootstrap";
 @use "/resources/scss/partials/reset.scss";
 @use "/resources/scss/partials/header.scss";
 @use "/resources/scss/partials/footer.scss";
