--- a/resources/scss/partials/index-main.scss
+++ b/resources/scss/partials/index-main.scss
@@ -1,3 +1,13 @@
+// utilities
+.opacity-0 {
+    opacity: 0;
+    z-index: 0;
+}
+
+.z-index-2 {
+    z-index: 2;
+}
+
 // main
 main {
     .comics-list {
@@ -15,6 +25,7 @@ main {
         margin-top: 50px;
 
         .card {
+            position: relative;
             width: calc((100% + 50px) / 3 - 50px);
             background-color: rgb(4, 60, 128);
             border-radius: 20px;
@@ -22,6 +33,57 @@ main {
             flex-direction: column;
             overflow: hidden;
             gap: 20px;
+
+            .cover,
+            .info,
+            button {
+                z-index: 1;
+            }
+
+            .modale {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgb(60, 60, 60);
+                padding: 20px;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                span {
+                    color: rgb(0, 145, 255);
+                    font-weight: bold;
+                }
+
+                .chiudi {
+                    padding: 10px 15px;
+                    background-color: white;
+                    color: black;
+                    text-align: center;
+                    border-radius: 20px;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: rgb(182, 182, 182);
+                    }
+                }
+
+                input {
+                    width: 100%;
+                    padding: 20px 15px;
+                    border: none;
+                    border-radius: 20px;
+                    color: white;
+                    background-color: red;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: rgb(194, 0, 0);
+                    }
+                }
+            }
 
             .cover {
                 width: 100%;
